Fix release-8 (Jabel) incompatibilities found by first compile
- records have no java.lang.Record at release 8: ConvEdge -> plain class
- List.of/Set.of/Map.of are Java 9+ API: use Collections factories
- getCache() collapses under var to the IGridCache upper bound; use an
  explicit IStorageGrid variable so IStorageMonitorable#getInventory
  resolves (same for the channel/monitor variables)
- handlePausing() sits outside the try block, so InterruptedException
  can never be thrown there; catch only CraftBranchFailure